--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,13 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600;700&family=Indie+Flower&family=Open+Sans&family=Rubik+Pixels&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600;700&family=IBM+Plex+Serif&family=Indie+Flower&family=Open+Sans&family=Rubik+Pixels&display=swap"
       rel="stylesheet"
     />
+
     <!-- font awesome -->
     <link
       rel="stylesheet"
