--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>React App</title>
+    <link
+      rel="shortcut icon"
+      href="./Sushan Logo-modified.png"
+      type="image/x-icon"
+    />
+    <title>Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
